--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@
 server.port=8880
 #优先读取配置文件
 test.hello=Hello4
+
+# 增加数据库连接
+spring.datasource.url=jdbc:mysql://localhost:3306/wiki?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true
+spring.datasource.username=wiki
+spring.datasource.password=60860797
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
