3-4 Mybatis使用示例，开发/test/list接口，查询test表中所有数据

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/wiki?characterEncoding=UTF8&au
 spring.datasource.username=wiki
 spring.datasource.password=60860797
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 配置mybatis所有Mapper.xml所在的路径
+#classpath是resources，**表示不管mapper下有多少子文件夹都可以识别出来
+mybatis.mapper-locations=classpath:/mapper/**/*.xml   
