--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # 配置mybatis所有Mapper.xml所在的路径
 #classpath是resources，**表示不管mapper下有多少子文件夹都可以识别出来
 mybatis.mapper-locations=classpath:/mapper/**/*.xml   
+
+#打印所有的sql日志：sql、参数、结果
+logging.level.com.zhuanye.wiki.mapper=trace
